Fix `overflow` scrolling, resposive-design bug.

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -6,6 +6,7 @@
   height: 5rem;
   .flex {
     justify-content: space-between;
+    overflow: visible;
   }
   h1 {
     font-weight: 700;
